load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "db_repository.go",
        "models.go",
        "repository.go",
    ],
    importpath = "github.com/nkhang/pluto/internal/image",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/rediskey:go_default_library",
        "//pkg/cache:go_default_library",
        "//pkg/errors:go_default_library",
        "//pkg/gorm:go_default_library",
        "//pkg/logger:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_t_tiger_gorm_bulk_insert_v2//:go_default_library",
    ],
)
