load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["wrapper.go"],
    importpath = "github.com/nkhang/pluto/pkg/ginwrapper",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/errors:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)
