load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "initialize.go",
        "module.go",
    ],
    importpath = "github.com/nkhang/pluto/internal/fx/labelfx",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/label:go_default_library",
        "//internal/label/labelapi:go_default_library",
        "//pkg/cache:go_default_library",
        "//pkg/gin:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)
