load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "initialize.go",
        "module.go",
    ],
    importpath = "github.com/nkhang/pluto/internal/fx/toolfx",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/tool:go_default_library",
        "//internal/tool/toolapi:go_default_library",
        "//pkg/cache:go_default_library",
        "//pkg/gin:go_default_library",
        "@com_github_go_redis_redis//:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)
