load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "initialize.go",
        "invoke.go",
    ],
    importpath = "github.com/nkhang/pluto/pkg/fx/loggerfx",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/logger:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)
